--- a/src/modules/feedback/feedback.html
+++ b/src/modules/feedback/feedback.html
@@ -1,33 +1,33 @@
 ﻿
 <div class="form">
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" ng-submit="saveData()">
   <div class="form-group">
     <label for="inputName3" class="col-sm-2 col-sm-offset-2 control-label">Ваше Имя</label>
     <div class="col-sm-4">
-      <input class="form-control" id="inputName3" placeholder="Имя" ng-model="formInfo.Name">
+      <input class="form-control" id="inputName3" placeholder="Имя" ng-model="formInfo.name">
     </div>
   </div><br>
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 col-sm-offset-2 control-label">Пошта</label>
     <div class="col-sm-4">
-      <input class="form-control" id="inputEmail3" placeholder="Email" ng-model="formInfo.Email">
+      <input class="form-control" id="inputEmail3" placeholder="Email" ng-model="formInfo.email">
     </div>
   </div><br>
   <div class="form-group">
     <label for="inputNumber3" class="col-sm-2 col-sm-offset-2 control-label">Ваш номер</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" id="inputPassword3" placeholder="Номер" ng-model="formInfo.Number">
+      <input type="text" class="form-control" id="inputPassword3" placeholder="Номер" ng-model="formInfo.number">
     </div>
   </div><br>
   <div class="form-group">
     <label for="inputMessage3" class="col-sm-2 col-sm-offset-2 control-label">Сообщение</label>
     <div class="col-sm-4">
-      <input type="textarea" class="form-control" id="inputMessage" placeholder="Сообщение" ng-model="formInfo.Message">
+      <input type="textarea" class="form-control" id="inputMessage" placeholder="Сообщение" ng-model="formInfo.message">
     </div>
   </div><br>
   <div class="form-group">
     <div>
-      <button type="submit" class="btn btn-success" ng-click="saveData()">Отправить</button>
+      <button type="submit" class="btn btn-success">Отправить</button>
     </div>
   </div>
   <span>{{formInfo}}</span>
