--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body ng-app="app" ng-controller="mainController">
+<body ng-app="app" ng-controller="mainController" style="color:white">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
