--- a/src/modules/home/home.html
+++ b/src/modules/home/home.html
@@ -81,10 +81,10 @@
                 </div>
                 <div class="col-lg-6" style="text-align: center">
                     <div class="socials">
-                    <a href="https://www.facebook.com/" <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/" <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/?lang=ru" <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-                    <a href="https://plus.google.com/" <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank" <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/?lang=ru" target="_blank" <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                    <a href="https://plus.google.com/" target="_blank" <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i></a>
                         </div>
             </div>
             <!-- /.row -->
